--- a/src/app/pages/home/components/content/content.component.html
+++ b/src/app/pages/home/components/content/content.component.html
@@ -1,6 +1,9 @@
 <h1 class="vintage-title" id="pageTitle">Minha Lista de Tarefas</h1>
 
 <div class="vintage-grid" aria-labelledby="pageTitle">
+
+
+  /// criar componente alan !!!!!!!!!!!!!!!!!!!! - task-form
   <div class="container-vintage">
     <mat-card class="card-vintage">
       <mat-card-title>{{
@@ -99,6 +102,8 @@
       </mat-card-content>
     </mat-card>
   </div>
+
+  /// criar componente alan !!!!!!!!!!!!!!!!!!!! - task-list
 
   <div class="container-vintage">
     <div *ngIf="tasks && tasks.length > 0; else emptyTasks">
