--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,10 @@
-<content></content>
+<h1 class="vintage-title" id="pageTitle">Minha Lista de Tarefas</h1>
+
+<div class="vintage-grid" aria-labelledby="pageTitle">
+  <section>
+    <task-form />
+  </section>
+  <section>
+    <task-list />
+  </section>
+</div>
