--- a/src/app/pages/components/_vintage-theme.scss
+++ b/src/app/pages/components/_vintage-theme.scss
@@ -98,6 +98,8 @@ mat-card-title {
 .list-vintage {
   padding: 0;
   margin: 0;
+  overflow-y: auto !important;
+  max-height: 410px;
 }
 
 .item-vintage {
