--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,12 @@
 <h1 class="vintage-title" id="pageTitle">Minha Lista de Tarefas</h1>
 
 <div class="vintage-grid" aria-labelledby="pageTitle">
+  <!-- FORM -->
   <section>
     <task-form />
   </section>
+
+  <!-- TASKS -->
   <section>
     <task-list />
   </section>
