--- a/src/app/pages/components/task-form/task-form.component.scss
+++ b/src/app/pages/components/task-form/task-form.component.scss
@@ -1,1 +1,68 @@
 @use "../vintage-theme";
+
+mat-card-title {
+  padding-bottom: 1rem;
+  text-align: center;
+}
+
+.card-vintage {
+  background-color: transparent;
+  box-shadow: none;
+  padding: 0;
+}
+
+.form-vintage {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.vintage-input .mat-form-field-flex {
+  background-color: #ffffff !important;
+  border: 1px solid #e0d8c8 !important;
+  border-radius: 4px !important;
+}
+
+.vintage-input .mat-form-field-underline {
+  display: none;
+}
+
+.form-actions {
+  display: flex;
+  gap: 10px;
+  justify-content: flex-end;
+  margin-top: 1rem;
+}
+
+.btn-vintage {
+  font-weight: bold;
+  transition: background-color 0.3s ease, transform 0.3s ease,
+    box-shadow 0.3s ease, color 0.3s ease;
+}
+
+.btn-vintage:hover {
+  background-color: #005cbb;
+}
+
+.btn-cancel-vintage:hover {
+  background-color: #ba1319;
+}
+
+.btn-cancel-vintage {
+  font-weight: bold;
+  background-color: #bd282d;
+  color: #ffffff !important;
+  border: none;
+  transition: background-color 0.3s ease, transform 0.3s ease,
+    box-shadow 0.3s ease, color 0.3s ease;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.18), 0 7px 14px rgba(0, 0, 0, 0.12),
+    0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.btn-cancel-vintage:hover,
+.btn-vintage:hover {
+  color: #ffffff;
+  transform: translateY(-6px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25), 0 15px 30px rgba(0, 0, 0, 0.2),
+    0 4px 6px rgba(0, 0, 0, 0.15);
+}
