--- a/src/app/pages/components/task-details-dialog/task-details-dialog.component.scss
+++ b/src/app/pages/components/task-details-dialog/task-details-dialog.component.scss
@@ -1,4 +1,27 @@
-mat-card {
+.card-container-vintage {
   font-family: "Courier New", Courier, monospace;
   text-align: left;
+}
+
+.card-container-vintage mat-card-actions {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.btn-close-vintage {
+  font-weight: bold;
+  background-color: transparent;
+  background-color: #bd282d;
+  color: #ffffff;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 1rem;
+  cursor: pointer;
+  transition: all 0.4s ease-in-out;
+}
+
+.btn-close-vintage:hover {
+  background-color: #ba1319;
+  transform: translateY(-3px) scale(1.03);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15), 0 2px 4px rgba(0, 0, 0, 0.1);
 }
