feat,style: adds animations and icons

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,7 @@
-<h1 class="vintage-title" id="pageTitle">Minha Lista de Tarefas</h1>
+<h1 class="vintage-title" id="pageTitle">
+  Minha Lista de Tarefas
+  <mat-icon aria-hidden="true">check_circle</mat-icon>
+</h1>
 
 <div class="vintage-grid" aria-labelledby="pageTitle">
   <!-- FORM -->
