feat,style,chore: adds angular animation, creation of "page-footer" component

--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,4 +1,4 @@
-<div class="not-found-container">
+<div class="not-found-container" [@cascadeAnimation]>
   <h1>404</h1>
   <h2>Página Não Encontrada</h2>
   <p>A página que você está procurando não existe.</p>
