--- a/src/app/components/page-footer/page-footer.component.html
+++ b/src/app/components/page-footer/page-footer.component.html
@@ -1,3 +1,3 @@
-<footer class="footer-vintage">
-  &copy; 2025 Alan Ryan da Silva Domingues - Todos os direitos reservados
+<footer class="footer-vintage" [@slideUpAnimation]>
+  © 2025 Alan Ryan da Silva Domingues - Todos os direitos reservados
 </footer>
